--- a/app/src/main/res/layout/chat_list.xml
+++ b/app/src/main/res/layout/chat_list.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/message_constraint">
+    android:id="@+id/message_constraint"
+    >
 
-    <TextView
-        android:id="@+id/senderView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="sender"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp"
-        />
 
+
+    <LinearLayout
+        android:id="@+id/mesgCont"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/messageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="message"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/senderView"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="8dp"
         android:background="@drawable/rounded_view"
+        android:elevation="2dp"
         android:padding="5dp"
-        android:layout_marginBottom="4dp"
-        android:textSize="18sp"
+        android:text="message"
         android:textColor="@color/blacknot"
-        android:elevation="2dp"/>
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_margin="5dp"
+
+         />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
