--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -36,7 +36,7 @@
     android:id="@+id/activityBar"
     android:transitionName="bar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -52,22 +52,10 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/cardview_light_background"
-        android:onClick="onFeedClick"
 
         android:src="@drawable/home_icon" />
 
-    <ImageButton
-        android:id="@+id/explore_button"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@color/colorPrimary"
-        android:elevation="5dp"
-        android:onClick="onExploreClick"
-        android:scaleType="fitCenter"
-        android:padding="7dp"
-        android:src="@drawable/location_icon" />
+
 
     <ImageButton
         android:id="@+id/profile_button"
@@ -154,5 +142,8 @@
             />
 
     </android.support.v7.widget.CardView>
+
+
+
 
 </android.support.constraint.ConstraintLayout>
