--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fields.curiumx.fields.ProfileActivity"
+    android:id="@+id/profileActivity"
     >
 
     <android.support.constraint.ConstraintLayout
@@ -12,37 +13,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/position_role_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="4dp"
             android:elevation="3dp"
             android:gravity="center"
             android:textStyle="bold"
             android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/usersTeam" />
-
-        <TextView
-            android:id="@+id/bio_text1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="4dp"
-            android:elevation="3dp"
-            android:gravity="center"
-            android:maxLines="1"
-            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@id/gradient"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/position_role_text" />
+            app:layout_constraintTop_toBottomOf="@id/team_with_icon" />
 
         <TextView
             android:id="@+id/friends"
@@ -88,6 +76,7 @@
             <ImageView
                 android:layout_width="75dp"
                 android:layout_height="75dp"
+                android:contentDescription="@string/profile_image"
                 android:src="@drawable/profile_round" />
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -104,40 +93,68 @@
             android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:elevation="4dp"
             android:text="@string/username"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile" />
 
-        <TextView
-            android:id="@+id/usersTeam"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/team_with_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:elevation="4dp"
-            android:text="Team"
-            android:visibility="visible"
+            android:background="@drawable/rounded_view"
+            android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userName" />
+            app:layout_constraintTop_toBottomOf="@+id/userName">
+
+            <ImageView
+                android:id="@+id/team_icon"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="4dp"
+                android:src="@drawable/ic_team_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/usersTeam"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/usersTeam"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginStart="4dp"
+                android:text="team"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/team_icon"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/rep"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
 
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
-        android:elevation="5dp"
+        android:elevation="3dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +171,6 @@
             android:paddingEnd="3dp"
             android:paddingStart="7dp"
             android:paddingTop="3dp"
-            android:text="100"
             android:textAlignment="center"
             android:textColor="@color/blacknot"
             android:textStyle="bold"
@@ -163,6 +179,9 @@
             app:layout_constraintEnd_toStartOf="@id/badge_rep"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            android:text="1000"
+            android:layout_marginBottom="2dp"
 
             />
 
@@ -176,12 +195,52 @@
             android:paddingStart="1dp"
             android:paddingTop="5dp"
             android:src="@drawable/reps"
+            android:contentDescription="@string/badge"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/reputation"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+           />
 
     </android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/testCurrentField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_view"
+        android:elevation="3dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textColor="@color/blacknot"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rep" />
+
+    <TextView
+        android:id="@+id/fields_plus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/rounded_view"
+        android:backgroundTint="@color/premium_yellow"
+        android:elevation="3dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/fields_plus"
+        android:textColor="@color/blacknot"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="463dp" />
+
 
     <LinearLayout
         android:id="@+id/activityBar"
@@ -208,18 +267,6 @@
 
             android:src="@drawable/home_icon" />
 
-        <ImageButton
-            android:id="@+id/explore_button"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:elevation="5dp"
-            android:onClick="onExploreClick"
-            android:padding="7dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/location_icon" />
 
         <ImageButton
             android:id="@+id/profile_button"
@@ -228,67 +275,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/cardview_light_background"
-            android:onClick="onProfileClick"
             android:src="@drawable/person_icon" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/testCurrentField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_view"
-        android:elevation="3dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:textColor="@color/blacknot"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rep" />
-
-    <TextView
-        android:id="@+id/badges"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_view"
-        android:backgroundTint="@color/colorPrimary"
-        android:elevation="3dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="@string/badges"
-        android:textColor="@color/blacknot"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/testCurrentField" />
-
-    <TextView
-        android:id="@+id/fields_plus"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/rounded_view"
-        android:backgroundTint="@color/premium_yellow"
-        android:elevation="3dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="@string/fields_plus"
-        android:textColor="@color/blacknot"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/activityBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 
     <ProgressBar
