--- a/app/src/main/res/layout/taking_part_list.xml
+++ b/app/src/main/res/layout/taking_part_list.xml
@@ -8,10 +8,12 @@
         android:id="@+id/profile_image_list"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
 
         />
 
@@ -23,8 +25,15 @@
         android:textSize="20sp"
         android:text="vsd"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/profile_image_list"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/DividerColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
