--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,6 +20,22 @@
         android:background="@color/DividerColor"
         app:layout_constraintTop_toBottomOf="@id/change_password_tab" />
 
+    <TextView
+        android:id="@+id/delete_user_tab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/delete_account"
+        android:textSize="20sp"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/change_password_tab"
+        />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@color/DividerColor"
+        app:layout_constraintTop_toBottomOf="@id/delete_user_tab" />
+
     <Button
         android:textAllCaps="false"
         android:id="@+id/logoutButton"
