--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -48,7 +48,7 @@
         android:id="@+id/change_password_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/fields_button_states"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/change_password"
         android:textAllCaps="false"
