--- a/app/src/main/res/layout/activity_pending_player.xml
+++ b/app/src/main/res/layout/activity_pending_player.xml
@@ -51,4 +51,16 @@
 
             />
     </android.support.constraint.ConstraintLayout>
+
+    <ProgressBar
+        android:id="@+id/pending_players_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+
+        />
 </android.support.constraint.ConstraintLayout>
