--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/change_password_tab"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/change_password"
         android:textSize="20sp"
@@ -22,7 +22,7 @@
 
     <TextView
         android:id="@+id/delete_user_tab"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/delete_account"
         android:textSize="20sp"
@@ -35,6 +35,22 @@
         android:layout_height="1dp"
         android:background="@color/DividerColor"
         app:layout_constraintTop_toBottomOf="@id/delete_user_tab" />
+
+    <TextView
+        android:id="@+id/privacy_policy_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/privacy_policy_text"
+        android:textSize="20sp"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/delete_user_tab"
+        />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@color/DividerColor"
+        app:layout_constraintTop_toBottomOf="@id/privacy_policy_tab" />
 
     <Button
         android:textAllCaps="false"
