--- a/app/src/main/res/layout/activity_team_players.xml
+++ b/app/src/main/res/layout/activity_team_players.xml
@@ -17,6 +17,24 @@
         android:id="@+id/emptytext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_results_found"/>
+        android:text="@string/no_results_found"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <ProgressBar
+        android:id="@+id/team_players_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+
+        />
 
 </android.support.constraint.ConstraintLayout>
