--- a/app/src/main/res/layout/pending_player_list.xml
+++ b/app/src/main/res/layout/pending_player_list.xml
@@ -4,13 +4,29 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/pending_player_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/profile_default"
+
+        />
+
     <TextView
         android:id="@+id/pending_player_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/pending_player_image"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <ImageView
@@ -20,7 +36,10 @@
         android:src="@drawable/ic_cross_red"
         app:layout_constraintEnd_toStartOf="@id/accept"
         android:layout_marginEnd="8dp"
-        android:padding="5dp"/>
+        android:padding="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
     <ImageView
         android:id="@+id/accept"
@@ -29,7 +48,10 @@
         android:src="@drawable/ic_pending_players_accept"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp"
-        android:padding="5dp"/>
+        android:padding="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 
 
