--- a/app/src/main/res/layout/activity_create_new_team.xml
+++ b/app/src/main/res/layout/activity_create_new_team.xml
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/team_username"
-        android:inputType="text"
+        android:inputType="textVisiblePassword"
         android:maxLength="28"
         android:lines="1"/>
     </android.support.design.widget.TextInputLayout>
