--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="32dp">
     <EditText
         android:id="@+id/username_edit"
-        android:inputType="text"
+        android:inputType="textVisiblePassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
