--- a/app/src/main/res/layout/activity_edit_team.xml
+++ b/app/src/main/res/layout/activity_edit_team.xml
@@ -80,6 +80,7 @@
 
         <EditText
             android:id="@+id/edit_username"
+            android:inputType="textVisiblePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/team_username"
