--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -109,7 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/username"
-                    android:inputType="text"
+                    android:inputType="textVisiblePassword"
                     android:visibility="visible" />
 
             </android.support.design.widget.TextInputLayout>
